--- a/lab-02/package.json
+++ b/lab-02/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lab-web-ii",
+  "name": "my-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,6 +18,10 @@
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
-    "ts-node": "^10.9.2"
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.13.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   }
 }
